# natscore

./: .env.example  .gitignore  LICENSE  MODEL_LICENSE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: train.high_consensus.yaml  train.kaggle.yaml  train.layer_probe_L6.yaml  train.magnitude.yaml  train.sanity.yaml  train.small.yaml
docs/: BENCHMARK.md  DATASETS.md  KAGGLE_SETUP.md
outputs/natscore-small-v0-kaggle/: config.yaml  eval_dev.json
scripts/: 00_inspect_dataset.py  01_extract_features.py  02_train.py  03_evaluate.py  05_aggregate_benchmark.py  06_generate_training_charts.py  build_pair_meta.py
scripts/kaggle/: push_train_kernel.sh  save_checkpoint_to_dataset.sh  train_natscore_ablation.ipynb  train_natscore_t4.ipynb
src/natscore/: __init__.py  cli.py  compare.py  features.py  model.py  pooling.py  score.py
src/natscore/data/: feature_cache.py  online_pair_dataset.py  pair_dataset.py  speechjudge.py
src/natscore/eval/: calibration.py  speechjudge_eval.py
src/natscore/train/: config.py  losses.py  online_trainer.py  trainer.py
tests/: test_ablations.py  test_aggregator.py  test_calibration.py  test_compare_api.py  test_data_parallel.py  test_features.py  test_losses.py  test_model.py  test_online_trainer.py  test_pair_dataset.py  test_pooling.py  test_scaffold.py  test_score_api.py  test_speechjudge_eval.py  test_streaming_dataset.py  test_train_config.py
tests/fixtures/: mock_speechjudge_5pairs.json
