[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "natscore"
version = "0.1.0.dev0"
description = "Preference-supervised naturalness scorer for modern neural TTS (frozen Whisper-small encoder + Bradley-Terry head)."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Harshal" }]
keywords = ["tts", "speech", "naturalness", "mos", "whisper", "bradley-terry", "evaluation"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.3,<2.7",
    "torchaudio>=2.3",
    "transformers>=4.46",
    "huggingface_hub>=0.26",
    "soundfile>=0.12",
    "librosa>=0.10",
    "numpy>=1.26",
    "click>=8.1",
    "tqdm>=4.66",
]

[project.optional-dependencies]
train = [
    "datasets>=3.0",
    "wandb>=0.18",
    "accelerate>=0.34",
    "scikit-learn>=1.5",
    "scipy>=1.13",
    "pyyaml>=6.0",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.10",
    "pre-commit>=3.7",
]
benchmark = [
    # UTMOSv2 / WhiSQA installed via scripts/06_run_baselines.py; left out of metadata
    # to avoid forcing git+https deps on every CI install.
]

[project.scripts]
natscore = "natscore.cli:main"

[project.urls]
Homepage = "https://github.com/cybernovas/natscore"
Documentation = "https://github.com/cybernovas/natscore#readme"
Issues = "https://github.com/cybernovas/natscore/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
natscore = ["py.typed"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-q --strict-markers"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true
